--- a/Exc_6/skeleton/docker-compose.yml
+++ b/Exc_6/skeleton/docker-compose.yml
@@ -7,10 +7,12 @@ networks:
 volumes:
   order_pg_vol:
   # todo
+  order_minio_vol:
 
 services:
   traefik:
     image: "traefik:v3.5.2"
+    container_name: traefik
     security_opt:
       - no-new-privileges:true
     command:
@@ -19,15 +21,17 @@ services:
       - "--providers.docker.network=web"
       - "--entryPoints.web.address=:80"
     ports:
-      - "80:80"
+      - "8085:80"
       - "8080:8080"
     volumes:
       # Add Docker as a mounted volume, so that Traefik can read the labels of other services
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     networks:
       - web
+    restart: unless-stopped
 
   orderservice:
+    container_name: orderservice
     build: .
     restart: unless-stopped
     command: [ "/app/ordersystem" ]
@@ -51,6 +55,7 @@ services:
 
   sws:
     image: joseluisq/static-web-server:latest
+    container_name: sws
     environment:
       - SERVER_PORT=80
       - SERVER_ROOT=/public
@@ -81,8 +86,24 @@ services:
 
   order-minio:
     # todo use minio/minio:latest as image
-    # expose 8500
-    # add to network intercom
+    image: minio/minio:latest
+    container_name: order-minio
     # use the following commands: "server", "--address", ":8500", "/data"
-    # map the data volume
+    command: ["server", "/data", "--address", ":8500", "--console-address", ":42143"]
     # set environment variables MINIO_ROOT_USER and MINIO_ROOT_PASSWORD
+    environment:
+      - MINIO_ROOT_USER=root
+      - MINIO_ROOT_PASSWORD=verysecret
+    # map the data volume
+    volumes:
+      - order_minio_vol:/data
+    # expose 8500
+    ports:
+      - "8500:8500"      # API
+      - "42143:42143"    # Web console
+    # add to network intercom
+    networks:
+      - intercom
+    restart: unless-stopped
+
+
