--- a/Exc_7/skeleton/docker-compose.yml
+++ b/Exc_7/skeleton/docker-compose.yml
@@ -23,6 +23,7 @@ secrets:
     file: docker/s3_password_secret
 
 services:
+
   traefik:
     image: traefik:v3.6.1
     command:
@@ -39,13 +40,18 @@ services:
         protocol: tcp
         mode: ingress
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro  # Traefik reads Swarm API
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     networks:
       - web
     deploy:
-      # todo
-      # Replicate only to manager
-      # expose dashboard to localhost/dashboard
+      placement:
+        constraints:
+          - node.role == manager
+      labels:
+        # Dashboard only accessible locally
+        - "traefik.http.routers.dashboard.rule=Host(`localhost`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))"
+        - "traefik.http.routers.dashboard.service=api@internal"
+        - "traefik.http.routers.dashboard.entrypoints=web"
 
 
   frontend:
@@ -53,8 +59,11 @@ services:
     networks:
       - web
     deploy:
-      # todo deploy globally
-      # should be available at http://localhost from every node
+      mode: global
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.frontend.rule=Host(`localhost`)"
+        - "traefik.http.services.frontend.loadbalancer.server.port=80"
 
 
   orderservice:
@@ -64,28 +73,34 @@ services:
       - postgres
       - minio
     secrets:
-      # todo use secrets
+      - postgres_user
+      - postgres_password
+      - s3_user
+      - s3_password
     environment:
       - POSTGRES_DB=order
       - PGPORT=5555
       - DB_HOST=postgres
       - S3_ENDPOINT=minio:8500
-      # todo use secrets
-      - S3_ACCESS_KEY_ID_FILE=
-      - S3_SECRET_ACCESS_KEY_FILE=
-      - POSTGRES_USER_FILE=
-      - POSTGRES_PASSWORD_FILE=
+      # Secrets via _FILE variables
+      - S3_ACCESS_KEY_ID_FILE=/run/secrets/s3_user
+      - S3_SECRET_ACCESS_KEY_FILE=/run/secrets/s3_password
+      - POSTGRES_USER_FILE=/run/secrets/postgres_user
+      - POSTGRES_PASSWORD_FILE=/run/secrets/postgres_password
     networks:
       - web
       - intercom
     deploy:
-      # todo deploy global
-      # Should be reachable at http://orders.localhost
-      # always restart container on failure
+      mode: global
       restart_policy:
         condition: any
         delay: 5s
         window: 120s
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.orders.rule=Host(`orders.localhost`)"
+        - "traefik.http.services.orders.loadbalancer.server.port=8080"
+
 
   postgres:
     image: postgres:18
@@ -94,16 +109,19 @@ services:
     networks:
       - intercom
     secrets:
-      # todo use secrets
+      - postgres_user
+      - postgres_password
     environment:
       - POSTGRES_DB=order
       - PGPORT=5555
-      # todo use secrets
-      - POSTGRES_USER_FILE=
-      - POSTGRES_PASSWORD_FILE=
+      - POSTGRES_USER_FILE=/run/secrets/postgres_user
+      - POSTGRES_PASSWORD_FILE=/run/secrets/postgres_password
     deploy:
-      # todo replicate only to one worker node
-      # todo use constraints
+      placement:
+        constraints:
+          - node.role == worker
+          - node.labels.db == true
+
 
   minio:
     image: minio/minio:latest
@@ -111,13 +129,15 @@ services:
     volumes:
       - minio_vol:/data
     secrets:
-      # todo use secrets
+      - s3_user
+      - s3_password
     environment:
-      # todo use secrets
-      - MINIO_ROOT_USER_FILE=
-      - MINIO_ROOT_PASSWORD_FILE=
+      - MINIO_ROOT_USER_FILE=/run/secrets/s3_user
+      - MINIO_ROOT_PASSWORD_FILE=/run/secrets/s3_password
     networks:
       - intercom
     deploy:
-      # todo replicate only to one worker node
-      # todo use constraints
+      placement:
+        constraints:
+          - node.role == worker
+          - node.labels.minio == true
